<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="nl.changer.polypickerdemo.MainActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/get_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="Pick/Capture images"
            android:textColor="#000000" />

        <Button
            android:id="@+id/get_n_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/get_images"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/pick_N_images"
            android:textColor="#000000" />
    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/hori_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:foregroundGravity="left"
        android:paddingBottom="1dp"
        android:paddingTop="1dp" >

        <LinearLayout
            android:id="@+id/selected_photos_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:animateLayoutChanges="true"
            android:gravity="left"
            android:orientation="horizontal"
            android:visibility="visible" >

            <!-- images will be added dynamicall to this layout -->
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>