<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.changer.changer.nl.polypicker.CameraFragment">

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gallery_grid"
        android:layout_gravity="center"
        android:numColumns="3"
        android:horizontalSpacing="0.5dp"
        android:verticalSpacing="0.5dp"
        android:drawSelectorOnTop="true"
        android:listSelector="?android:attr/selectableItemBackground"/>

</FrameLayout>
