<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/take_picture"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/photo_btn1" />

</FrameLayout>