<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/pp_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/pp_take_picture"
        style="@style/CameraButtonStyle"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_bg" />

</FrameLayout>